--- a/src/Acme/DemoBundle/Resources/views/Demo/index.html.twig
+++ b/src/Acme/DemoBundle/Resources/views/Demo/index.html.twig
@@ -2,10 +2,40 @@
 
 {% block title "Symfony - Demos" %}
 
-{% block content_header '' %}
+{% block content_header %}
+<script type="text/javascript">
+        window.fbAsyncInit = function() {
+            FB.init({
+                appId      : '{{ facebookAppId }}',
+                status     : true,
+                cookie     : true,
+                xfbml      : true
+            });
+
+            FB.Event.subscribe('auth.login', function(response) {
+                window.location.reload();
+            });
+        };
+
+        function onFacebookConnect() {
+            window.location.reload();
+        }
+
+        (function(d){
+            var js, id = 'facebook-jssdk'; if (d.getElementById(id)) {return;}
+            js = d.createElement('script'); js.id = id; js.async = true;
+            js.src = "//connect.facebook.net/en_US/all.js";
+            d.getElementsByTagName('head')[0].appendChild(js);
+        }(document));
+</script>
+{% endblock%}
 
 {% block content %}
     <h1>Available demos</h1>
+    <fb:login-button v="2" size="xlarge" onlogin="onFacebookConnect();">
+        Login with Facebook
+    </fb:login-button>
+    <div id="fb-root"></div>
     <ul id="demo-list">
         <li><a href="{{ path('_demo_hello', {'name': 'World'}) }}">Hello World</a></li>
         <li><a href="{{ path('_demo_secured_hello', {'name': 'World'}) }}">Access the secured area</a> <a href="{{ path('_demo_login') }}">Go to the login page</a></li>
