--- a/src/Acme/DemoBundle/Resources/views/layout.html.twig
+++ b/src/Acme/DemoBundle/Resources/views/layout.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:fb="http://www.facebook.com/2008/fbml" xmlns:og="http://opengraphprotocol.org/schema/">
     <head>
         <meta charset="UTF-8" />
         <title>{% block title %}Demo Bundle{% endblock %}</title>
